--- a/css/index.css
+++ b/css/index.css
@@ -347,7 +347,7 @@ img{
 
 
 .footer{
-    background-color: grey;
+    background-color: rgb(143, 208, 229);
 }
 .footer__container{
     row-gap: 2rem;
@@ -381,6 +381,7 @@ img{
     }
     .section-title{
         margin-bottom: 3rem;
+        text-decoration: underline;
     }
     .section-title::after{
         width: 64px;
