--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,8 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap");
-
+body{
+    background-color:rgb(201, 236, 192) ;
+}
 
 :root{
     --header-height: 3rem;
